[package]
name = "actix-flash"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Flash messages for actix-web 2.0"
readme = "README.md"
keywords = ["actix", "actix-web", "flash"]
documentation = "https://docs.rs/actix-flash"
homepage = "https://github.com/kardeiz/actix-flash"
repository = "https://github.com/kardeiz/actix-flash"

[dependencies]
actix-web = "2"
actix-service = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3.4"
serde_json = "1.0.48"

[dev-dependencies]
actix-rt = "1.0.0"
