[package]
name = "actix-flash"
version = "0.2.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Flash messages for actix-web 2.0"
readme = "README.md"
keywords = ["actix", "actix-web", "flash"]
documentation = "https://docs.rs/actix-flash"
homepage = "https://github.com/kardeiz/actix-flash"
repository = "https://github.com/kardeiz/actix-flash"

[features]
default = ["v3"]
v2 = ["actix-web-v2"]
v3 = ["actix-web-v3"]

[dependencies]
actix-web-v2 = { version = "2", package = "actix-web", optional = true }
actix-web-v3 = { version = "3", package = "actix-web", optional = true, default-features = false }
actix-service = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"

[dev-dependencies]
actix-rt = "1.0.0"
